--- a/Style/style.css
+++ b/Style/style.css
@@ -11154,4 +11154,20 @@ html {
   margin: auto;
 }
 
+/* Footer */
+.footer {
+  font-size: 8px;
+  background: black;
+  color: white;
+  font-weight: 600;
+  width: 100%;
+  height: 100%;
+  margin-top: 20px;
+}
+
+#copyright {
+  font-size: 6px;
+  font-style: oblique;
+}
+
 /*# sourceMappingURL=style.css.map */
