--- a/Style/style.scss
+++ b/Style/style.scss
@@ -1,6 +1,7 @@
 @use '..//style/node_modules/bootstrap/scss/bootstrap.scss';
 
 
+
 html {
   width: 100%;;
   font-size: 11px;
@@ -40,3 +41,19 @@ html {
   margin: auto;
 }
 
+/* Footer */
+
+.footer {
+  font-size: 8px;
+  background: black;
+  color: white;
+  font-weight: 600;
+  width: 100%;
+  height: 100%;
+  margin-top: 20px;
+}
+
+#copyright {
+  font-size: 6px;
+  font-style: oblique;
+}
