--- a/Style/style.css
+++ b/Style/style.css
@@ -11170,4 +11170,44 @@ html {
   font-style: oblique;
 }
 
+/*Home*/
+h1 {
+  font-family: "Gloria Hallelujah", cursive;
+}
+
+section > .accueil > article {
+  border: 2px solid #5c5a5a;
+  border-radius: 10px;
+  padding: 2px;
+}
+section > .accueil > article div .card {
+  border-radius: 10px;
+}
+section > .accueil > article .card-title {
+  font-weight: bold;
+  background: #eeecec;
+  box-shadow: 0em 0 0.8em #828606;
+}
+
+.card > .card-header {
+  background: #e0e0cc;
+  font-weight: bold;
+  font-size: 13px;
+}
+
+.new_year > div .card-body > p {
+  font-family: "Gloria Hallelujah";
+  font-size: 12px;
+}
+
+.article_event > div .card-header {
+  color: #fc8702;
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.general_information > div .adhésion {
+  text-decoration: underline;
+}
+
 /*# sourceMappingURL=style.css.map */
