--- a/Style/style.scss
+++ b/Style/style.scss
@@ -57,3 +57,47 @@ html {
   font-size: 6px;
   font-style: oblique;
 }
+
+/*Home*/
+
+h1 {
+  font-family: 'Gloria Hallelujah', cursive;
+}
+
+section > .accueil > article  {
+  border: 2px solid rgb(92, 90, 90);
+  border-radius: 10px;
+  padding: 2px;
+  
+  div .card {
+  border-radius: 10px ;
+  }
+
+  .card-title {
+    font-weight: bold;
+    background: rgb(238, 236, 236);
+    box-shadow: -0em 0 .8em rgb(130, 134, 6);
+  }
+}
+
+.card > .card-header {
+  background: rgb(224, 224, 204);
+  font-weight: bold;
+  font-size: 13px;
+}
+
+.new_year > div .card-body > p {
+  font-family: 'Gloria Hallelujah';
+  font-size: 12px;
+}
+
+.article_event > div .card-header {
+  color: rgb(252, 135, 2);
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.general_information > div .adhésion {
+  text-decoration: underline;
+  
+}
