--- a/Style/style.scss
+++ b/Style/style.scss
@@ -1,7 +1,3 @@
-@use '..//style/node_modules/bootstrap/scss/bootstrap.scss';
-
-
-
 html {
   width: 100%;;
   font-size: 11px;
@@ -143,3 +139,38 @@ section > .event > .description > div > div > .card > .card-body {
     text-align: center;
   }
 }
+
+
+/*table of officials participants*/
+
+.participation {
+  border: 1px solid black;
+  margin: 5px;
+  padding: 0px;
+
+  h5 {
+    font-size: 16px;
+    font-weight: bold;
+  }
+}
+
+#table_participation {
+  font-size: 9px;
+  margin-bottom: 0.2em;
+  text-align: center;
+  
+  thead > tr > th {
+    padding: 5px;
+    text-decoration: underline;
+  }
+
+  tbody > tr > th, td {
+    padding: 5px;
+    vertical-align: middle;
+  }
+  
+  td > .btn {
+    font-size: 8px;
+  }
+}
+
