--- a/Style/style.css
+++ b/Style/style.css
@@ -155,4 +155,21 @@ section > .event > .description > div > div > .card > .card-body .btn {
   font-size: 8px;
 }
 
+/*progress bar*/
+.progress_bar {
+  margin-right: 10px;
+  margin-left: 10px;
+  padding: 5px;
+  background: lightgreen;
+  border: 1px solid #b4abab;
+}
+.progress_bar h5 {
+  font-size: 9px;
+  font-weight: bold;
+  text-align: center;
+}
+.progress_bar .progress {
+  margin-bottom: 5px;
+}
+
 /*# sourceMappingURL=style.css.map */
