--- a/Style/style.css
+++ b/Style/style.css
@@ -162,6 +162,7 @@ section > .event > .description > div > div > .card > .card-body .btn {
   padding: 5px;
   background: lightgreen;
   border: 1px solid #b4abab;
+  font-weight: bold;
 }
 .progress_bar h5 {
   font-size: 9px;
@@ -170,6 +171,7 @@ section > .event > .description > div > div > .card > .card-body .btn {
 }
 .progress_bar .progress {
   margin-bottom: 5px;
+  text-align: center;
 }
 
 /*# sourceMappingURL=style.css.map */
