--- a/Style/style.scss
+++ b/Style/style.scss
@@ -198,3 +198,28 @@ section > .event > .description > div > div > .card > .card-body {
 
 /*le club*/
 
+section > .club > article > div .card-body {
+  text-align: justify;
+}
+
+.statuts_club > .row > .col > .card ul > li {
+  background: lightgray;
+  border: 1px solid black;
+  margin-left: 1.5em;
+  margin-right: 1.5em;
+  margin-bottom: 5px;
+
+  h5 {
+    font-size: 1.2em;
+    color: rgb(0, 183, 255);
+    font-weight: bold;
+    font-style: oblique;
+    text-decoration: underline;
+    text-align: center;
+  }
+
+  p {
+    font-size: 13px;
+    padding-left: 5px;
+  }
+}
