--- a/Style/style.scss
+++ b/Style/style.scss
@@ -3,6 +3,7 @@ html {
   font-size: 11px;
 }
 
+
 /* Navbar*/
 
 #logo {
@@ -200,6 +201,11 @@ section > .event > .description > div > div > .card > .card-body {
 
 section > .club > article > div .card-body {
   text-align: justify;
+}
+
+
+.statuts_club > div .card > .card-header {
+  font-size: 1.5em;
 }
 
 .statuts_club > .row > .col > .card ul > li {
