09-create new page (photos) implementation structure html with nav footer and finished css on this page

--- a/Style/style.scss
+++ b/Style/style.scss
@@ -229,3 +229,13 @@ section > .club > article > div .card-body {
     padding-left: 5px;
   }
 }
+
+/* photos */ 
+
+section > .photos > p {
+  font-size: 30px;
+  border: 2px solid black;
+  background: lightgray;
+  margin-top: 150px;
+  margin-bottom: 150px;
+}
