--- a/Style/style.scss
+++ b/Style/style.scss
@@ -239,3 +239,11 @@ section > .photos > p {
   margin-top: 150px;
   margin-bottom: 150px;
 }
+
+/* Archives*/
+
+/*2011-2015*/
+
+.archives_2011-2015 > article > div .card-body > ul {
+    padding-left: 10px;  
+}
