--- a/Style/style.css
+++ b/Style/style.css
@@ -218,4 +218,19 @@ section > .photos > p {
   padding-left: 10px;
 }
 
+/*contact*/
+#home {
+  font-size: 15px;
+}
+
+.needs-validation {
+  background: rgba(202, 174, 174, 0.747);
+  text-align: center;
+  width: 300px;
+  height: 450px;
+  margin: auto;
+  border: 2px solid black;
+  border-style: dotted;
+}
+
 /*# sourceMappingURL=style.css.map */
