--- a/Style/style.scss
+++ b/Style/style.scss
@@ -247,3 +247,20 @@ section > .photos > p {
 .archives_2011-2015 > article > div .card-body > ul {
     padding-left: 10px;  
 }
+
+
+/*contact*/
+
+#home {
+  font-size: 15px;
+}
+
+.needs-validation {
+  background: rgba(202, 174, 174, 0.747);
+  text-align: center;
+  width: 300px;
+  height: 450px;
+  margin: auto;
+  border: 2px solid black;
+  border-style: dotted;
+}
