--- a/Style/style.scss
+++ b/Style/style.scss
@@ -3,6 +3,12 @@ html {
   font-size: 11px;
 }
 
+h1 {
+  background: rgb(209, 204, 204);
+  padding-top: 5px;
+  padding-bottom: 5px;
+  
+}
 
 /* Navbar*/
 
@@ -252,15 +258,33 @@ section > .photos > p {
 /*contact*/
 
 #home {
-  font-size: 15px;
+  font-size: 20px;
+  
 }
 
 .needs-validation {
   background: rgba(202, 174, 174, 0.747);
   text-align: center;
   width: 300px;
-  height: 450px;
+  height: 460px;
   margin: auto;
   border: 2px solid black;
   border-style: dotted;
+}
+
+.contact_page {
+  .btn {
+    margin-top: 10px;
+  }
+
+  label {
+    font-weight: 700;
+    font-style: oblique;
+    padding-top: 3px;
+  }
+}
+
+#condition_accept {
+  font-size: 9px;
+  padding-left: 5px;
 }
