--- a/Style/style.scss
+++ b/Style/style.scss
@@ -1,13 +1,22 @@
+/*
+CONTROLER LE CSS CONCERNANT LE FOOTER
+VERIFIER LE BON FCTIONNEMENT DES DIFFERENTES SECTIONS
+*/
+
 html {
-  width: 100%;;
   font-size: 11px;
+}
+
+html, body {
+  height: 100%;
+
 }
 
 h1 {
   background: rgb(209, 204, 204);
+  font-family: 'Gloria Hallelujah', cursive;
   padding-top: 5px;
-  padding-bottom: 5px;
-  
+  padding-bottom: 5px; 
 }
 
 /* Navbar*/
@@ -17,7 +26,7 @@ h1 {
 }
 
 #navbar_content {
-  padding: 10px;
+  /*padding: 10px;*/
 
   a:active {
     color: red;
@@ -39,41 +48,33 @@ h1 {
   box-shadow: -0.2em 0 .5em rgb(166, 167, 120);
   margin-top: 0.2em;
 }
-
+/*
 #Nav > .container > .row {
   margin: auto;
 }
+*/
 
 /* Footer */
 
-.footer {
-  font-size: 8px;
-  background: black;
-  color: white;
+footer {
   font-weight: 600;
-  width: 100%;
-  height: 100%;
-  margin-top: 20px;
 }
 
 #copyright {
-  font-size: 6px;
+  font-size: 8px;
   font-style: oblique;
 }
 
+
 /*Home*/
 
-h1 {
-  font-family: 'Gloria Hallelujah', cursive;
-}
-
-section > .accueil > article  {
+.accueil > article  {
   border: 2px solid rgb(92, 90, 90);
   border-radius: 10px;
   padding: 2px;
   
   div .card {
-  border-radius: 0 0 10px 10px;
+  border-radius: 10px;
   }
 
   .card-title {
@@ -81,12 +82,14 @@ section > .accueil > article  {
     background: rgb(238, 236, 236);
     box-shadow: -0em 0 .8em rgb(130, 134, 6);
   }
-}
 
-.card > .card-header {
-  background: rgb(224, 224, 204);
-  font-weight: bold;
-  font-size: 13px;
+  .card > .card-header {
+    background: rgb(224, 224, 204);
+    border-radius: 10px 10px 0 0 ;
+    font-weight: bold;
+    font-size: 13px;
+  }
+  
 }
 
 .new_year > div .card-body > p {
@@ -107,7 +110,7 @@ section > .accueil > article  {
 
 /*event*/
 
-section > .event > .description > div > div > .card > .card-body {
+.event > .description > div > div > .card > .card-body {
   font-size: 9px;
 
   .btn {
@@ -117,7 +120,8 @@ section > .event > .description > div > div > .card > .card-body {
   }
 }
 
-.modal-body {
+.event {
+
   form > div > label {
     font-weight: bold;
     font-size: 9px;
@@ -132,18 +136,21 @@ section > .event > .description > div > div > .card > .card-body {
   font-size: 8px;
 }
 
-.modal-footer > .btn {
-  font-size: 9px;
-}
+.modal  {
 
-.modal > .modal-dialog {
-  width: 80%;
-  margin-left: auto;
-  margin-right: auto;
-
+  .modal-dialog {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
   h5 {
     font-weight: bold;
     text-align: center;
+  }
+
+  .modal-footer > .btn {
+    font-size: 9px;
   }
 }
 
@@ -152,8 +159,8 @@ section > .event > .description > div > div > .card > .card-body {
 
 .participation {
   border: 1px solid black;
-  margin: 5px;
-  padding: 0px;
+  /*margin: 5px;
+  padding: 0px;*/
 
   h5 {
     font-size: 16px;
@@ -184,10 +191,9 @@ section > .event > .description > div > div > .card > .card-body {
 /*progress bar*/
 
 .progress_bar {
-  margin-right: 10px;
-  margin-left: 10px;
+
   padding: 5px;
-  background: lightgreen;
+  background: rgb(207, 238, 207);
   border: 1px solid rgb(180, 171, 171);
   font-weight: bold;
 
@@ -198,7 +204,7 @@ section > .event > .description > div > div > .card > .card-body {
   }
 
   .progress {
-    margin-bottom: 5px;
+    margin-bottom: 10px;
     text-align: center;
   }
 }
@@ -217,8 +223,7 @@ section > .club > article > div .card-body {
 .statuts_club > .row > .col > .card ul > li {
   background: lightgray;
   border: 1px solid black;
-  margin-left: 1.5em;
-  margin-right: 1.5em;
+  
   margin-bottom: 5px;
 
   h5 {
@@ -266,7 +271,7 @@ section > .photos > p {
   background: rgba(202, 174, 174, 0.747);
   text-align: center;
   width: 300px;
-  height: 460px;
+  height: 470px;
   margin: auto;
   border: 2px solid black;
   border-style: dotted;
@@ -288,3 +293,5 @@ section > .photos > p {
   font-size: 9px;
   padding-left: 5px;
 }
+
+
