--- a/Style/style.scss
+++ b/Style/style.scss
@@ -1,18 +1,11 @@
-/*
-CONTROLER LE CSS CONCERNANT LE FOOTER
-VERIFIER LE BON FCTIONNEMENT DES DIFFERENTES SECTIONS
-*/
-
-
-
 /*GENERAL*/
+
 html {
   font-size: 11px;
 }
 
 html, body {
   height: 100%;
-
 }
 
 h1 {
@@ -23,9 +16,7 @@ h1 {
   padding-bottom: 5px; 
 }
 
-
 .card {
-
   .card-header {
     text-align: center;
     font-weight: bold;
@@ -36,10 +27,11 @@ h1 {
     text-align: center;
     font-weight: bold;
   }
+
+  .card-footer {
+    text-align: center;
+  }
 }
-
-
-
 
 /* Navbar*/
 
@@ -48,7 +40,6 @@ h1 {
 }
 
 #navbar_content {
-  /*padding: 10px;*/
 
   a:active {
     color: red;
@@ -70,11 +61,6 @@ h1 {
   box-shadow: -0.2em 0 .5em rgb(166, 167, 120);
   margin-top: 0.2em;
 }
-/*
-#Nav > .container > .row {
-  margin: auto;
-}
-*/
 
 /* Footer */
 
@@ -89,33 +75,33 @@ footer {
 
 /*Home*/
 
-.accueil > .wrapper > article > .row > .col > section {
+section {
+  margin-top: 5px;
   border: 2px solid rgb(92, 90, 90);
   border-radius: 10px;
-  padding: 5px;
   background: rgba(255, 251, 0, 0.267);
-  
-  .card {
-  border-radius: 10px;
-  text-align: center;
-  }
-
-  .card-title {
-    font-weight: bold;
-    background: rgb(238, 236, 236);
-    box-shadow: -0em 0 .8em rgb(130, 134, 6);    
-  }
-
-  .card-header {
-    background: rgb(224, 224, 204);
-    border-radius: 10px 10px 0 0 ;
-    font-weight: bold;
-    font-size: 13px;
-  }
-
+  padding: 5px;
 }
 
-.accueil > .wrapper > article > .row > .col {
+.accueil > .wrapper > article > .row > .col >  {
+  
+  section 
+  {  
+    .card {
+      border-radius: 10px;
+      }
+    
+      .card-header {
+        background: rgb(224, 224, 204);
+        border-radius: 10px 10px 0 0 ;
+      }
+    
+      .card-title {
+        background: rgb(238, 236, 236);
+        box-shadow: -0em 0 .8em rgb(134, 89, 6);    
+      }
+
+  }
 
   .new_year > .card > .card-body > p {
     font-family: 'Gloria Hallelujah';
@@ -125,19 +111,18 @@ footer {
   .event_article > div .card-header {
     color: rgb(252, 135, 2);
     font-size: 18px;
-    font-weight: bold;
   }
   
   .general_information > .card > .card-body > p > .adhésion {
     text-decoration: underline;
     font-size: 12px;
   }
+  
 }
-
 
 /*event*/
 
-.event > .description > div > div > .card > .card-body {
+.event_description > .card > .card-body {
   font-size: 9px;
 
   .btn {
@@ -148,7 +133,6 @@ footer {
 }
 
 .event {
-
   form > div > label {
     font-weight: bold;
     font-size: 9px;
@@ -157,13 +141,13 @@ footer {
   .form-check {
     font-size: 9px;
   }
+
+  ::placeholder {
+    font-size: 8px;
+  }
 }
 
-::placeholder {
-  font-size: 8px;
-}
-
-.modal  {
+.event_description > .modal  {
 
   .modal-dialog {
     width: 80%;
@@ -185,74 +169,57 @@ footer {
 /*table of officials participants*/
 
 .participation {
-  border: 1px solid black;
-  /*margin: 5px;
-  padding: 0px;*/
-
+  
   h5 {
     font-size: 16px;
     font-weight: bold;
+    text-align: center;
   }
 }
 
 #table_participation {
   font-size: 9px;
-  margin-bottom: 0.2em;
   text-align: center;
   
+  
   thead > tr > th {
-    padding: 5px;
+    padding: 3px;
     text-decoration: underline;
   }
 
   tbody > tr > th, td {
-    padding: 5px;
-    vertical-align: middle;
+    padding: 2px;
   }
   
   td > .btn {
-    font-size: 8px;
+    font-size: 9px;
   }
 }
 
 /*progress bar*/
 
 .progress_bar {
-
-  padding: 5px;
+  padding: 10px;
   background: rgb(207, 238, 207);
-  border: 1px solid rgb(180, 171, 171);
-  font-weight: bold;
-
+  
   h5 {
-    font-size: 9px;
     font-weight: bold;
     text-align: center;
   }
 
   .progress {
     margin-bottom: 10px;
-    text-align: center;
   }
 }
 
 /*le club*/
 
-section > .club > article > div .card-body {
-  text-align: justify;
-}
-
-
-.statuts_club > div .card > .card-header {
-  font-size: 1.5em;
-}
-
-.statuts_club > .row > .col > .card ul > li {
+.statuts_club > .card ul > li {
   background: lightgray;
   border: 1px solid black;
-  
   margin-bottom: 5px;
-
+  padding: 0px;
+ 
   h5 {
     font-size: 1.2em;
     color: rgb(0, 183, 255);
@@ -270,20 +237,26 @@ section > .club > article > div .card-body {
 
 /* photos */ 
 
-.pictures > div section >  p {
-  font-size: 30px;
-  border: 2px solid black;
-  background: lightgray;
-  margin-top: 150px;
-  margin-bottom: 150px;
+.pictures {
+  
+  section {
+    background: none;
+    border: none;
+  }
+  
+  p {
+    font-size: 30px;
+    border: 2px solid black;
+    background: lightgray;
+    margin-top: 150px;
+    margin-bottom: 150px;
+  }
 }
 
 /* Archives*/
 
-/*2011-2015*/
-
-.archives_2011-2015 > article > div .card-body > ul {
-    padding-left: 10px;  
+.archives > .wrapper > article .card ul {
+    padding-left: 10px;   
 }
 
 
@@ -291,7 +264,6 @@ section > .club > article > div .card-body {
 
 #home {
   font-size: 20px;
-  
 }
 
 .needs-validation {
