--- a/Style/style.css
+++ b/Style/style.css
@@ -29,6 +29,12 @@ h1 {
   text-align: center;
 }
 
+#scroll_to_top {
+  position: fixed;
+  bottom: 50px;
+  right: 5px;
+}
+
 /* Navbar*/
 #logo {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
